JBTM-3670 Make the quickstarts work with JDK17
removing redundant version declaration

adding comment for dependency javassist version upgrade

moving properties to root pom

removing profile, now minimum jdk is 11

replace version.naraynana property with project.version